changed file structure, added granary and fixed bugs

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 			<input id='cutStone' class='stoneCutter clicker' 
 			type='button' 
 			value='+0'>
+			<input id='createGranary' class='buildBuilding hidden' type='button' value='&uarr; Food Limit'>
+			<input id='granaryCost' type='hidden' value='100'>
 		</div><div id="toolsCaption" class='hidden'>
 			<div>
 				Tools
