fixing various bugs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,26 @@
 	.hidden{
 		display:none;
 	}
-
+	table{
+		border:10px;
+	}
+	td{
+		width:30px;
+		height:30px;
+		text-align:center;
+	}
+	.empty{
+		background-color:grey;
+	}
+	.plains{
+		background-color:lawngreen;
+	}
+	.forest{
+		background-color:green;
+	}
+	.mountain{
+		background-color:red;
+	}
 	</style>
 	<script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -49,21 +68,29 @@
 				id='secondsRemaining'>30</span>
 			</span>
 		  </li>
+		  <li class='nav-item hidden'>
+			<a id='landMenuButton' class="nav-link" href="#">Land</a>
+		  </li>
 		  <li class="nav-item">
 		    <a id='capitalMenuButton' class="nav-link active" href="#">Capital</a>
 		  </li>
-		  <li class="nav-item">
+		  <li id ='laborOption' class="nav-item hidden">
 		    <a id='laborMenuButton' class="nav-link" href="#">
 			    Labor:<span id='numOfPeople'>1</span>
+				<span id='readyToHire' class='hidden'>*</span>
 		    </a>
 		  </li>
 		</ul>
-	</div><div id='capital' class='hidden'>
+	</div><div id='land' class='bottomBar'>
+		<table id='landContainer' class='hidden'>
+		
+		</table>
+	</div><div id='capital' class='hidden bottomBar'>
 		<progress id='newPopProgress' value='0' max='100'></progress>
 		<span id='newPopCentCaption' class=''>
 			(<span id='newPopCent'>0</span>%)
 		</span>
-		<input id='campfire' type='button' class='hidden' value='Campfire'>
+
 		<input type='hidden' id='clickCounter' value='0'>
 		<div id='clicksCaption' >
 			Clicks:<span id='numOfClicks'>0</span>
@@ -72,9 +99,7 @@
 		</div><div id="foodCaption" class='hidden'>
 			Food:
 			<span id='numOfFood'>0</span>/<span id='foodLimit'>10</span>
-			<input id='farm' class='farmer clicker ' 
-			type='button' 
-			value='+0'>
+			<input id='farm' class='farmer clicker hidden' type='button' value='+0'>
 		</div>
 		<div id="woodCaption" class='hidden'>
 			Wood:
@@ -82,6 +107,7 @@
 			<input id='chop' class='lumberjack clicker ' 
 			type='button' 
 			value='+0'>
+			<input id='campfire' type='button' class='hidden' value='Campfire'>
 		</div>
 		<div id="stoneCaption" class='hidden'>
 			Stone:
@@ -96,19 +122,24 @@
 				Tools
 			</div><div>
 				Stone Hoes:<span id='numOfStoneHoes'>0</span>
-				<input id='makeStoneHoe' class='makeStoneTool clicker' type='button' 
+				<input id='makeStoneHoe' class='makeStoneTool clicker stoneAge' type='button' 
 	     			value='+0'> 
 			</div><div>
 				Stone Axes:<span id='numOfStoneAxes'>0</span>
-				<input id='makeStoneAxe' class='makeStoneTool clicker' type='button' 
+				<input id='makeStoneAxe' class='makeStoneTool clicker stoneAge' type='button' 
 	     			value='+0'> 
 			</div><div>
-				Stone Pick Axes:<span id='numOfStonePickAxes'>0</span>
-				<input id='makeStonePickAxe' class='makeStoneTool clicker' type='button' 
+				Stone Pick Axes:<span id='numOfStonePickaxes'>0</span>
+				<input id='makeStonePickaxe' class='makeStoneTool clicker stoneAge' type='button' 
 	     			value='+0'> 
-			</div>
+			</div>			
+		</div><div id='weaponsCaption' class='hidden'>
+			Stone Spears:
+			<span id='numOfStoneSpears'>0</span>
+			<input id='makeStoneSpear' class='makeStoneWeapon clicker stoneAge' type='button' value='+0'>
 		</div>
-	</div><div id='labor' class='hidden'>
+	</div><div id='labor' class='hidden bottomBar'>
+		<input type='hidden' id='autoFocusAway' value='false'>
 		<input type='hidden' id='campfireFloorChance' value='0'> 
 		<div id='workerCaption'>
 			Workers:
@@ -117,12 +148,11 @@
 			Farmers:
 			<span id='numOfFarmers'>0</span >
 			<input type='button' id='addFarmer' 
-			class='hire ' value='+'>
-			<span id='farmOverseerCaption' class='hidden'>
+			class='hire hidden' value='+'>
+			<span id='farmerOverseerCaption' class=''>
 				[<span id='numOfFarmerOverseers'>0</span>]
 			</span>
-			<input type='button' id='overseeFarm'
-		        class='overseer ' value='&#8734'>
+			<input type='button' id='overseeFarmers' class='overseer hidden ' value='&#8734'>
 		</div><div id='lumberjackCaption' class='otherWorkers hidden'>
 			Lumberjacks:
 			<span id='numOfLumberjacks'>0</span>
@@ -130,8 +160,7 @@
 			<span id='lumberjackOverseerCaption' class='hidden'>
 				[<span id='numOfLumberjackOverseers'>0</span>]
 			</span>
-			<input type='button' id='overseeForest' class='overseer' 
-			value='&#8734'>
+			<input type='button' id='overseeLumberjacks' class='overseer hidden' value='&#8734'>
 		</div><div id='stoneCutterCaption' class='otherWorkers hidden'>
 			Stone Cutters:
 			<span id='numOfStoneCutters'>0</span>
@@ -139,17 +168,20 @@
 			<span id='stoneCutterOverseerCaption' class='hidden'>
 				[<span id='numOfStoneCutterOverseers'>0</span>]
 			</span>
-			<input type='button' id='overseeQuarry' class='overseer' 
-			value='&#8734'>
+			<input type='button' id='overseeStoneCutters' class='overseer hidden' value='&#8734'>
 		</div><div id='overseerCaption' class='otherWorkers hidden'>
 			Overseers:
 			<span id="numOfOverseers">0</span>
 			<input type='button' id='addOverseer' 
 			class='hire ' value='+'>
-		</div><div id='toolmakerCaption' class='otherWorkers'>
+		</div><div id='toolmakerCaption' class='otherWorkers hidden'>
 			Toolmaker:
 			<span id='numOfToolmakers'>0</span>
 			<input type='button' id='addToolmaker' class='hire' value='+'>
+		</div><div id='weaponmakerCaption' class='otherWorkers hidden'>
+			Weaponmakers:
+			<span id='numOfWeaponmakers'>0</span>
+			<input type='button' id='addWeaponmaker' class='hire' value='+'>
 		</div>
 	</div>
 
